[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/web",
    "packages/desktop",
    "packages/mobile",
    "packages/api",
    "packages/types",
]
[workspace.dependencies]
dioxus = { version = "0.7.9" }
thiserror = "2.0.18"
serde = "1.0.228"
# workspace
ui = { path = "packages/ui" }
types = { path = "packages/types" }
api = { path = "packages/api" }
