[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/web",
    "packages/desktop",
    "packages/mobile",
    "packages/api",
    "packages/types",
    "packages/dtos",
]
[workspace.dependencies]
dioxus = { version = "0.7.9" }
thiserror = "2.0.18"
serde = "1.0.228"
uuid = { version = "1.23.2", features = ["js"] }
serde_json = "1.0"
reqwest = { version = "0.13" }
futures = "0.3"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components" }
dioxus-ssr = "0.7.9"
tokio = { version = "1" }
tokio-stream = "0.1"
once_cell = "1"
tokio-tungstenite = "0.29.0"
tungstenite = "0.29.0"
yfinance-rs = "0.9.0"
async-trait = "0.1.89"
tracing = "0.1.44"
# workspace
ui = { path = "packages/ui" }
types = { path = "packages/types" }
api = { path = "packages/api" }
dtos = { path = "packages/dtos" }
